# self-driving-robot

./: .gitignore  README.md  environment.sh  set_ros_master.sh
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/coordinate/: CMakeLists.txt  package.xml
catkin_ws/src/coordinate/launch/: static_tf.launch
catkin_ws/src/coordinate/src/: coordinate.py  gazebo_map_tf.py  gmapping_odom.py  map.py  obstacle_map.py  tf.py  tf_publisher.py
catkin_ws/src/demo/: CMakeLists.txt  package.xml
catkin_ws/src/demo/launch/: robot_sensor.launch  robotx_gazebo.launch  self_driving.launch
catkin_ws/src/gps/gstar/: CMakeLists.txt  package.xml
catkin_ws/src/gps/odometry/: CMakeLists.txt  package.xml
catkin_ws/src/gps_receiver/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/gps_receiver/config/: gps_node_config.yaml
catkin_ws/src/gps_receiver/launch/: gps.launch  set_goal.launch
catkin_ws/src/gps_receiver/src/: gps_node.py  set_goal_server.py
catkin_ws/src/gps_receiver/srv/: set_goal.srv
catkin_ws/src/imu/: read_port.py
catkin_ws/src/imu/imu/: CMakeLists.txt  package.xml
catkin_ws/src/point_cloud/: CMakeLists.txt  package.xml
catkin_ws/src/point_cloud/launch/: icp_mapping.launch
catkin_ws/src/pure_pursuit/: CMakeLists.txt  package.xml
catkin_ws/src/robot_localization/: README.md
catkin_ws/src/robotx_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/robotx_msgs/msg/: ObstaclePose.msg  ObstaclePoseList.msg
catkin_ws/src/visualize_data/: CMakeLists.txt  package.xml
catkin_ws/src/wheel_odom/: CMakeLists.txt  package.xml
(+70 files in other folders)
